add docs page and focus trapping

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -62,6 +62,8 @@
       url: /components/SectionIntro
     - title: Subdomain nav bar
       url: /components/SubdomainNavBar
+    - title: Sub nav
+      url: /components/SubNav
     - title: Testimonial
       url: /components/Testimonial
     - title: Timeline
