--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -54,7 +54,7 @@
       url: /components/OrderedList
     - title: Pillar
       url: /components/Pillar
-    - title: Pricing cards
+    - title: Pricing options
       url: /components/PricingOptions
     - title: Prose
       url: /components/Prose
