remove typescript flag from remix integration test

--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -44,7 +44,7 @@ jobs:
         run: cd ./packages/react && npm pack
 
       - name: Configuring Remix.run
-        run: yes | npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}} --typescript
+        run: yes | npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}}
 
       - name: Retrieving package version
         id: package-version
