--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -54,6 +54,8 @@
       url: /components/OrderedList
     - title: Pillar
       url: /components/Pillar
+    - title: Pricing options
+      url: /components/PricingOptions
     - title: Prose
       url: /components/Prose
     - title: River
