--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint": "npm run lint --workspaces --if-present",
     "release": "npm run build:lib && changeset publish",
     "start": "npm run build:lib && npm run start:storybook & npm run start:lib",
-    "start:docs": "cd apps/docs && npm run start",
+    "start:docs": "npm run build:lib && cd apps/docs && npm run start",
     "start:lib": "npm run start --workspace=packages/react",
     "start:storybook": "npm run build:lib && npm run start --workspace=apps/storybook",
     "test": "npm run test --workspaces --if-present",
