add documentation page

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -42,6 +42,8 @@
       url: /components/FAQ
     - title: Hero
       url: /components/Hero
+    - title: IDE
+      url: /components/IDE
     - title: Image
       url: /components/Image
     - title: Label
