--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "@primer/behaviors": "^1.3.4",
-    "@oddbird/popover-polyfill": "^0.3.1",
+    "@oddbird/popover-polyfill": "0.4.0",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
