--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   release:
     if: github.ref_name == 'main'
     name: Release
-    uses: primer/.github/.github/workflows/release.yml@main
+    uses: primer/.github/.github/workflows/release.yml@v1.0.0
     secrets:
       gh_token: ${{ secrets.GPR_AUTH_TOKEN_SHARED }}
       npm_token: ${{ secrets.NPM_AUTH_TOKEN_SHARED }}
@@ -18,7 +18,7 @@ jobs:
   release-next-minor:
     if: github.ref_name == 'next-minor'
     name: Next minor
-    uses: primer/.github/.github/workflows/release.yml@main
+    uses: primer/.github/.github/workflows/release.yml@v1.0.0
     with:
       title: Release tracking (next minor)
     secrets:
