--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -24,6 +24,8 @@
       url: /components/Bento
     - title: Box
       url: /components/Box
+    - title: Breadcrumbs
+      url: /components/Breadcrumbs
     - title: Button
       url: /components/Button
     - title: Button group
