copy some modifications from #526

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,6 +49,7 @@
     "@juggle/resize-observer": "^3.4.0",
     "@primer/octicons-react": "^19.8.0",
     "@reach/auto-id": "^0.17.0",
+    "@storybook/react": "7.6.17",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
@@ -62,6 +63,7 @@
     "axe-playwright": "^1.2.3",
     "color2k": "^2.0.2",
     "css-loader": "^6.7.4",
+    "highlight.js": "^11.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-axe": "^6.0.1",
     "mini-css-extract-plugin": "^2.7.6",
