--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -62,6 +62,7 @@
     "axe-playwright": "^1.2.3",
     "color2k": "^2.0.2",
     "css-loader": "^6.7.4",
+    "highlight.js": "^11.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-axe": "^6.0.1",
     "mini-css-extract-plugin": "^2.7.6",
