--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -38,6 +38,7 @@
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
     "@storybook/addon-storysource": "^7.6.17",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
     "@storybook/react": "^7.6.17",
     "@storybook/react-webpack5": "^7.6.17",
     "@storybook/test-runner": "^0.10.0",
