adds React docs for Tooltip

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -76,6 +76,8 @@
       url: /components/Testimonial
     - title: Timeline
       url: /components/Timeline
+    - title: Tooltip
+      url: /components/Tooltip
     - title: Unordered list
       url: /components/UnorderedList
     - title: Video player
