--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -32,17 +32,18 @@
     "@babel/preset-react": "^7.22.0",
     "@babel/preset-typescript": "^7.21.5",
     "@github/axe-github": "^0.5.0",
-    "@storybook/addon-a11y": "7.0.18",
-    "@storybook/addon-actions": "7.0.18",
-    "@storybook/addon-essentials": "7.0.18",
-    "@storybook/addon-interactions": "7.0.18",
-    "@storybook/addon-links": "7.0.18",
-    "@storybook/addon-storysource": "7.0.18",
-    "@storybook/jest": "0.1.0",
-    "@storybook/react": "7.0.18",
-    "@storybook/react-webpack5": "7.0.18",
-    "@storybook/test-runner": "0.10.0",
-    "@storybook/testing-library": "0.1.0",
+    "@storybook/addon-a11y": "^7.6.17",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-storysource": "^7.6.17",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "@storybook/test-runner": "^0.10.0",
+    "@storybook/theming": "^7.6.17",
     "axe-core": "^4.7.2",
     "axe-playwright": "^1.2.3",
     "css-loader": "^6.7.4",
@@ -53,7 +54,7 @@
     "postcss-preset-env": "^7.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "storybook": "7.0.18",
+    "storybook": "^7.6.17",
     "storybook-css-modules-preset": "^1.1.1",
     "typed-css-modules": "^0.7.2",
     "typescript": "^4.9.5"
