Upgrade Storybook to 7.6 (#589)
* update node version in workflows from 16 to 18

* remove trailing whitespace in workflows

* remove unnecessary steps from primitives diff workflow

* install reference dependencies before branch dependencies in primitive diff workflow

* update dependencies

* migrate @storybook/jest and @storybook/testing-library to @storybook/test

* remove deprecated storybook argTypesRegex

* remove unused stories.mdx glob

* use absolute paths for storybook addons

* use swc with storybook

--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: 18
 
       - name: Cache dependencies
         uses: actions/cache@v2
@@ -31,17 +31,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
-
       - name: Install dependencies (reference)
-        run: pushd temp-main; npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps; popd
+        run: pushd temp-main; npm ci --legacy-peer-deps; popd
 
-      - name: Build
-        run: npm run build --workspace=packages/design-tokens
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
 
       - name: Build (reference)
         run: pushd temp-main; npm run build --workspace=packages/design-tokens; popd
+
+      - name: Build
+        run: npm run build --workspace=packages/design-tokens
 
       - name: Export diff
         run: |
