--- a/.github/workflows/integration_test_cra.yml
+++ b/.github/workflows/integration_test_cra.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: 18
 
       - name: Caching dependencies
         uses: actions/cache@v2
@@ -81,7 +81,7 @@ jobs:
 
       - name: Installing local build
         run: |
-          cd ${{env.CRA_FOLDER}} 
+          cd ${{env.CRA_FOLDER}}
           cp ../packages/react/primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz ./
           npm install primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz
 
