add baseline component

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -68,6 +68,8 @@
       url: /components/River
     - title: Section intro
       url: /components/SectionIntro
+    - title: Statistic
+      url: /components/Statistic
     - title: Subdomain nav bar
       url: /components/SubdomainNavBar
     - title: Sub nav
