add current branch to trigger list

--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'changeset-release/main'
       - 'changeset-release/next-minor'
+      - 'rezrah/release-checklist'
 
 jobs:
   release-candidate:
