--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   release-candidate:
     if: ${{ github.repository == 'primer/brand' && (github.ref_name == 'changeset-release/main' || github.ref_name == 'rezrah/release-checklist') }}
-    name: Candidate
+    name: RC checklist message
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
