--- a/.github/workflows/release_candidate_checklist.yml
+++ b/.github/workflows/release_candidate_checklist.yml
@@ -31,12 +31,10 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo
             });
-            console.log('result', result)
-            const botComments = result.data.filter(c => c.user.login == 'github-actions[bot]')
-            if (!botComments.length) {
 
-            console.log('final body', body.replace('{{PR_AUTHOR}}', context.payload.sender.login))
-              await github.rest.issues.createComment({
+
+            if (!result.data.some(comment => comment.body.startsWith('## ❗ Pre-merge checklist'))) {
+               await github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
