--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -41,7 +41,9 @@
   "devDependencies": {
     "@github/axe-github": "^0.5.0",
     "@playwright/test": "^1.34.3",
-    "axe-playwright": "^1.1.12"
+    "axe-playwright": "^1.1.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3"
   },
   "engines": {
     "node": ">=16.0.0",
