--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,8 +42,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@primer/behaviors": "^1.3.4",
     "@oddbird/popover-polyfill": "0.4.3",
+    "@primer/behaviors": "^1.3.4",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
@@ -64,7 +64,9 @@
     "color2k": "^2.0.2",
     "css-loader": "^6.7.4",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-axe": "^6.0.1",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.23",
     "postcss-loader": "^6.2.1",
