--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -19,8 +19,8 @@ jobs:
     with:
       node_version: 18
       install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
-      build: npm run build && npm run build:docs:preview && npm run build:storybook:preview
-      output_dir: apps/docs/public/
+      build: npm run build && npm run build:docs:preview && npm run build:storybook:preview && mkdir brand-temp && mv apps/docs/public/* brand-temp && mv brand-temp apps/docs/public/brand
+      output_dir: apps/docs/public
 
   deploy-storybook:
     if: ${{ github.repository == 'primer/brand' }}
