--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -19,8 +19,16 @@ jobs:
     with:
       node_version: 18
       install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
-      build: npm run build && npm run build:docs:preview && npm run build:storybook:preview
-      output_dir: apps/docs/public/
+      build: |
+        npm run build && \
+        npm run build:docs && \
+        npm run build:storybook && \
+        mkdir brand-temp && \
+        mv apps/docs/public/* brand-temp && \
+        mv brand-temp apps/docs/public/brand && \
+        # This is a client-side redirect that only applies to preview deployments. Workaround for lack of path prefixing.
+        echo '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Redirecting...</title><script>window.location.href = "/brand";</script></head><body><p>If you are not redirected automatically, follow this <a href="/brand">link to /brand</a>.</p></body></html>' > apps/docs/public/index.html
+      output_dir: apps/docs/public
 
   deploy-storybook:
     if: ${{ github.repository == 'primer/brand' }}
