--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -21,10 +21,9 @@
   "license": "MIT",
   "author": "GitHub, Inc.",
   "scripts": {
-    "build:preview": "npm run clean && scripts/build-storybook preview",
-    "build:prod": "npm run clean && scripts/build-storybook",
+    "build": "npm run clean && scripts/build-storybook",
     "clean": "rm -rf out",
-    "start": "storybook dev -p 6006  -s ../static",
+    "start": "storybook dev -p 6006",
     "start:axe": "storybook dev -p 6006 --no-version-updates"
   },
   "devDependencies": {
@@ -32,18 +31,19 @@
     "@babel/preset-react": "^7.22.0",
     "@babel/preset-typescript": "^7.21.5",
     "@github/axe-github": "^0.5.0",
-    "@storybook/addon-a11y": "^7.6.17",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-storysource": "^7.6.17",
+    "@storybook/addon-a11y": "^8.2.6",
+    "@storybook/addon-actions": "^8.2.6",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-interactions": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-storysource": "^8.2.6",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-webpack5": "^7.6.17",
-    "@storybook/test": "^7.6.17",
+    "@storybook/manager-api": "^8.2.6",
+    "@storybook/react": "^8.2.6",
+    "@storybook/react-webpack5": "^8.2.6",
+    "@storybook/test": "^8.2.6",
     "@storybook/test-runner": "^0.10.0",
-    "@storybook/theming": "^7.6.17",
+    "@storybook/theming": "^8.2.6",
     "axe-core": "^4.7.2",
     "axe-playwright": "^1.2.3",
     "css-loader": "^6.7.4",
@@ -54,10 +54,10 @@
     "postcss-preset-env": "^7.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "storybook": "^7.6.17",
+    "storybook": "^8.2.6",
     "storybook-css-modules-preset": "^1.1.1",
     "typed-css-modules": "^0.7.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
     "react": ">=17 <= 18",
