--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
   "scripts": {
     "build": "npm run clean --workspaces --if-present && npm run build:lib && npm run build:docs && npm run build:storybook",
     "build:docs": "cd apps/docs && npm run build",
-    "build:docs:preview": "cd apps/docs && npm run build:preview",
     "build:lib": "npm run build --workspace=packages/design-tokens --workspace=packages/react",
-    "build:storybook": "npm run build:prod --workspace=apps/storybook",
-    "build:storybook:preview": "npm run build:preview --workspace=apps/storybook",
+    "build:storybook": "npm run build --workspace=apps/storybook",
     "check": "npm run check --workspaces --if-present",
     "clean": "npm run clean --workspaces --if-present",
     "clean:node_modules": "npm exec --workspaces -- npx rimraf node_modules && npx rimraf node_modules",
@@ -66,13 +64,13 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=16.0.0",
