--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -17,6 +17,7 @@
     "cross-env": "7.0.2",
     "gatsby": "^3.7.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-postcss": "^4.14.0",
     "gatsby-plugin-typescript": "^2.12.1",
     "react": "^17.0.2",
