--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -79,8 +79,8 @@
     "webpack-cli": "^4.10.0"
   },
   "peerDependencies": {
-    "react": ">=17 <= 18",
-    "react-dom": ">=17 <= 18"
+    "react": ">=17 <20",
+    "react-dom": ">=17 <20"
   },
   "engines": {
     "node": ">=16.0.0",
