--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,6 +47,7 @@
     "clsx": "^1.2.1"
   },
   "devDependencies": {
+    "@figma/code-connect": "^1.0.5",
     "@juggle/resize-observer": "^3.4.0",
     "@primer/octicons-react": "^19.8.0",
     "@reach/auto-id": "^0.17.0",
