--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -44,7 +44,7 @@ jobs:
         run: cd ./packages/react && npm pack
 
       - name: Configuring Remix.run
-        run: npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}} --yes
+        run: npx create-remix --template joshfarrant/indie-stack ${{env.TEST_FOLDER}} --yes
 
       - name: Retrieving package version
         id: package-version
@@ -54,7 +54,7 @@ jobs:
 
       - name: Installing local build
         run: |
-          cd ${{env.TEST_FOLDER}} 
+          cd ${{env.TEST_FOLDER}}
           cp ../packages/react/primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz ./
           npm install primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz
 
@@ -68,7 +68,7 @@ jobs:
           cp ./packages/e2e/integration-tests/remix.run/_index.tsx ./${{env.TEST_FOLDER}}/app/routes
           cp ./packages/e2e/integration-tests/remix.run/root.tsx ./${{env.TEST_FOLDER}}/app
           cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/app
-          cp ./packages/e2e/cypress.config.js ./${{env.TEST_FOLDER}} 
+          cp ./packages/e2e/cypress.config.js ./${{env.TEST_FOLDER}}
           mkdir ${{env.TEST_FOLDER}}/integration-tests
           cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/integration-tests
           cp -r ./packages/e2e/integration-tests/tests ./${{env.TEST_FOLDER}}/integration-tests
