--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mdx": "^1.17.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-primer-react": "^0.7.4",
+    "eslint-plugin-primer-react": "5.4.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.8.0",
