--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -23,7 +23,7 @@
     "lib"
   ],
   "scripts": {
-    "build": "node scripts/build-tokens.js",
+    "build": "npm run clean && node scripts/build-tokens.js",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
@@ -33,8 +33,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@primer/primitives": "^7.15.0",
+    "@primer/primitives": "9.0.2",
     "color2k": "^2.0.2",
+    "fast-glob": "3.3.2",
     "style-dictionary": "3.8.0"
   },
   "engines": {
