--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -44,7 +44,7 @@ jobs:
         run: cd ./packages/react && npm pack
 
       - name: Configuring Remix.run
-        run: npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}} --yes
+        run: npx create-remix@latest ./${{env.TEST_FOLDER}} --yes
 
       - name: Retrieving package version
         id: package-version
@@ -56,7 +56,7 @@ jobs:
         run: |
           cd ${{env.TEST_FOLDER}} 
           cp ../packages/react/primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz ./
-          npm install primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz
+          npm install primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz vite-plugin-cjs-interop
 
       - name: Prefer ESM imports
         run: |
@@ -65,6 +65,7 @@ jobs:
 
       - name: Copying required files
         run: |
+          cp ./packages/e2e/integration-tests/remix.run/vite.config.ts ./${{env.TEST_FOLDER}}
           cp ./packages/e2e/integration-tests/remix.run/_index.tsx ./${{env.TEST_FOLDER}}/app/routes
           cp ./packages/e2e/integration-tests/remix.run/root.tsx ./${{env.TEST_FOLDER}}/app
           cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/app
