Add interface guidelines and react docs

--- a/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/apps/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -119,6 +119,8 @@
       url: /components/Heading
     - title: Text
       url: /components/Text
+    - title: DuotoneText
+      url: /components/DuotoneText
 
 - title: GitHub staff
   children:
