--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -33,10 +33,10 @@
     "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "lint": "eslint '**/*.{js,ts,tsx,md,mdx}' --max-warnings=0 --config ../../.eslintrc.js",
     "test:axe": "playwright test --config=scripts/playwright",
-    "test:visual": "scripts/playwright/run-visual-tests",
-    "test:visual:update": "npm run test:visual:generate && npm run test:visual:update-snapshots",
-    "test:visual:generate": "cd ../../apps/storybook && npx storybook build && cd ../../packages/e2e && ts-node scripts/playwright/playwright.generate-tests.ts",
-    "test:visual:update-snapshots": "scripts/playwright/update-visual-snapshots"
+    "test:visual": "NODE_ENV=test scripts/playwright/run-visual-tests",
+    "test:visual:update": "NODE_ENV=test npm run test:visual:generate && npm run test:visual:update-snapshots",
+    "test:visual:generate": "NODE_ENV=test cd ../../apps/storybook && npx storybook build && cd ../../packages/e2e && ts-node scripts/playwright/playwright.generate-tests.ts",
+    "test:visual:update-snapshots": "NODE_ENV=test scripts/playwright/update-visual-snapshots"
   },
   "devDependencies": {
     "@github/axe-github": "^0.5.0",
