--- a/.github/workflows/visual_test_storybook.yml
+++ b/.github/workflows/visual_test_storybook.yml
@@ -34,11 +34,11 @@ jobs:
         run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
 
       - name: Build assets
-        run: npm run build:lib && cd apps/storybook && npx storybook build
+        run: NODE_ENV=test npm run build:lib && cd apps/storybook && npx storybook build
 
       - name: Run visual tests
         id: playwright-step
-        run: npx start-server-and-test 'npx http-server ./apps/storybook/storybook-static -p 6006' 6006 'cd packages/e2e && npx playwright test'
+        run: NODE_ENV=test npx start-server-and-test 'npx http-server ./apps/storybook/storybook-static -p 6006' 6006 'cd packages/e2e && npx playwright test'
         continue-on-error: true
 
       - name: Upload error screenshots
