enforce test env

--- a/.github/workflows/visual_test_storybook.yml
+++ b/.github/workflows/visual_test_storybook.yml
@@ -8,6 +8,8 @@ jobs:
     if: ${{ github.repository == 'primer/brand' }}
     name: Storybook
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
