--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -34,9 +34,7 @@
   },
   "devDependencies": {
     "@primer/primitives": "9.1.1",
-    "color2k": "^2.0.2",
-    "fast-glob": "3.3.2",
-    "style-dictionary": "3.8.0"
+    "fast-glob": "3.3.2"
   },
   "engines": {
     "node": ">=16.0.0",
