--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -70,7 +70,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.23",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.8.3",
+    "postcss-preset-env": "10.1.1",
     "style-dictionary": "^3.8.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
